Alberto hace cosas

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,15 +28,14 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ALDIRobot_v2.jar
+dist.jar=${dist.dir}/AlDIRobotv2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ALDIRobot_v2
+dist.jlink.output=${dist.jlink.dir}/AlDIRobotv2
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.robo_code.classpath}:\
     ${libs.robocode2.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -46,8 +45,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=18
-javac.target=18
+javac.source=19
+javac.target=19
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -72,11 +71,9 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ALDIRobot_v2
-main.class=aldirobot_v2.ALDIRobot_v2
-manifest.file=manifest.mf
+jlink.launcher.name=AlDIRobotv2
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
