--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\UX431F\\AppData\\Roaming\\NetBeans\\14\\build.properties
+user.properties.file=C:\\Users\\Alberto\\AppData\\Roaming\\NetBeans\\14\\build.properties
